log
Tue Mar 14 21:06:26 HSP 2023: 
 tests:  1|6
total_score: 10/70
a3a75c1
Fri 17 Mar 2023 05:46:46 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b9944d8
Fri 17 Mar 2023 05:47:29 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8233267
Fri 17 Mar 2023 05:48:26 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
e4c2442
Fri 17 Mar 2023 05:50:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
5e0b5fe
Fri 17 Mar 2023 05:57:36 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:85:13: error: expected identifier before ‘*’ token
   85 |   vector -> *datos =
      |             ^
exercises.c:84:11: error: variable ‘vector’ set but not used [-Werror=unused-but-set-variable]
   84 |   Vector *vector =  malloc(sizeof(Vector));
      |           ^~~~~~
exercises.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1e31a75
Fri 17 Mar 2023 06:00:40 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 40/70
3d0be93
Fri 17 Mar 2023 06:02:30 PM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 50/70
f4c563c
